# galclass

./: .gitignore  README.md  setup.cfg  setup.py
examples/: JWST_categories.json  JWST_draft.json  launch_galclass.bat
galclass/: __init__.py  __main__.py
galclass/analysis/: __init__.py  classification.py
galclass/fileio/: __init__.py  jsonio.py
galclass/misc/: __init__.py  console.py
galclass/qt/: __init__.py  application.py  substrate.py  widget.py  window.py
