[metadata]
name = galclass
description = 'GALaxy CLASSifier'
long_description = 'A module for the morphological classification of galaxies.'
url = https://github.com/spastras/galclass
author_email = st.pastras@gmail.com
author = Stavros Pastras
requires_python = >=3.9.0
license = GPL-3+

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/spastras/galclass/issues
    Source Code = https://github.com/spastras/galclass


[options]
packages = find:
install_requires =
    numpy>=1.23
    PyQt6>=6.6.0
    PyQt6-WebEngine>=6.6.0