[metadata]
name = galclass
description = 'GALaxy CLASSifier'
long_description = 'A module for the morphological classification of galaxies.'
url = https://github.com/spastras/galclass
author_email = st.pastras@gmail.com
author = Stavros Pastras
requires_python = >=3.6.1
license = GPL-3+

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/spastras/galclass/issues
    Source Code = https://github.com/spastras/galclass


[options]
packages = find:
install_requires =
    numpy>=1.13.0
    PyQt6>=6.4.0